avatar overlap fix

--- a/src/StatsPage.scss
+++ b/src/StatsPage.scss
@@ -23,7 +23,6 @@
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
-    z-index: 0;
   }
 
   .story-bg-overlay {
@@ -38,21 +37,39 @@
   .story {
     position: relative;
     width: 100%;
+    height: 100%;
 
     h1 {
       font-size: 26px;
+      margin-top: 4px;
     }
+
+    h1, p {
+      z-index: 100;
+    }
+
     .story-content {
-      text-align: left;
       position: relative;
+      padding: 20px;
       width: 100%;
       height: 100%;
-      padding: 20px;
+      text-align: left;
+
+      display: flex;
+      flex-direction: column;
     }
 
     .accent {
       color: rgb(218, 3, 56);
       font-weight: bold;
+    }
+
+    .joro-avatar {
+      position: absolute;
+      bottom: 0;
+      z-index: 0;
+      right: 20px;
+      height: 40%;
     }
   }
 }
